tests/valid/variable.myth
import std::io;

fn main(): void {
    let x: i32 = 1;
}
