tests/invalid/struct.myth
struct {
    x: i32;
    y: i32;
}

struct Point {
    x: ;
    y: i32;
}

struct Point2 {
    : i32;
    y: i32;
}

struct Point3 {
    x: i32
    y: i32;
}

fn main(): void {}
